--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "abolfazl"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/7.jpg"
   bio              : I'm the best student.
   location         : "تهران"
   email            : sauleh@gmail.com
